# image-classifier-pipeline-public

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: app.py  utils.py
home-assistant/tapo-save-copper-cam-1/: home-assistant-pb96-cbc21983a5f9.json  main.py  requirements.txt
ml_pipeline/: additional_epochs.py  augmentation.py  customCNN.py  customResNet.py  save-hp-tuned-model.py  save-large-model.py  train.py
ml_pipeline/data-processing/: 2x-augment.py  download-from-gcp-last-week.py  random-sample.py
ml_pipeline/data_processing/: balance-using-augmentation.py  download-from-gcp-last-day.py  download-from-gcp.py  random-sample.py  x2_augment.py
ml_pipeline/regular-training/: download-from-gcp-all-main.py
ml_pipeline/regular_training/: gcp_and_augment.py  prepare_data.py
models/: 7-weights-resnet-model-1686054041.json  8-weights-resnet-model-1685392979.json  add50-9model-1685012232.keras  add50-model-1680786376.keras  plus50-model-1680786376.keras  z9model-1685012232.keras
models/model-1680547187/: keras_metadata.pb  saved_model.pb
models/model-1680547187/variables/: variables.data-00000-of-00001  variables.index
relabel_api/relabel/: main.py  requirements.txt
tests/: test_app-cloud-run.py  test_app-docker.py  test_app.py
